--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">HolaMundo</string>
-    <string name="titulo_app"> Mi Hola Mundo</string>
-    <string name="texto"> texto de la aplicacion</string>
+    <string name="titulo_app"> Bienvenido</string>
+    <string name="boton"> Entrar</string>
 </resources>
